--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,4 +1,4 @@
-<form #loginForm="ngForm" (submit)="onSubmit()" class="p-3 p-sm-5" novalidate>
+<form #loginForm="ngForm" (submit)="onSubmit()" class="p-3 p-sm-5" novalidate *ngIf="!loggedIn">
   <legend class="py-3">{{ registration ? 'Register an account' : 'Log in' }}</legend>
 
   <div *ngIf="registration" class="form-group required">
@@ -55,6 +55,10 @@
         <small class="text-danger" [hidden]="!emailField.errors.required">{{ errorMsg.required }}</small>
         <small class="text-danger" [hidden]="!emailField.errors.email">{{ errorMsg.email }}</small>
       </div>
+      <div class="error" *ngIf="loginForm.submitted" >
+        <small class="text-danger" *ngIf="!registration && newUser" >Email address is not registered</small>
+        <small class="text-danger" *ngIf="registration && !newUser" >Email address already exists</small>
+      </div>
   </div>
 
   <div *ngIf="registration" class="form-group required">
@@ -90,6 +94,9 @@
         <small class="text-danger" [hidden]="!passwordField.errors.required">{{ errorMsg.required }}</small>
         <small class="text-danger" [hidden]="!passwordField.errors.minlength">Must be at least 8 characters</small>
       </div>
+      <div class="error" *ngIf="loginForm.submitted" >
+        <small class="text-danger" [hidden]="passwordMatch">Password is incorrect</small>
+      </div>
   </div>
 
   <div *ngIf="registration" class="form-group required">
@@ -115,3 +122,7 @@
 
   <p *ngIf="!registration">Not registered? <span class="link" (click)="registration = true">Sign up</span></p>
 </form>
+
+<div class="p-5" *ngIf="loggedIn">
+  <h2>Log in successful</h2>
+</div>
